fdo#39694: SwTxtFld: do expand the field in the ctor

While only the text formatting is able to expand all fields correctly,
this is still good enough for many field types and fixes a race
condition when the field value is requested before layout is finished.
(regression from CWS sw34bf01, 8485708f3001fca132c3353c464fe7187ef62bed)
(cherry picked from commit 9519deda120b73b72e75d89c3b2ae3d66220ec2d)

Signed-off-by: Miklos Vajna <vmiklos@suse.cz>